force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/FlexiChk__Checklist_Template_Assignment_Group__c.object-meta.xml
<CustomObject>
    <label>Checklist Template Assignment Group</label>
    <nameField>
        <displayFormat>TGRP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Template Assignment Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>