force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/fields/FlexiChk__Advanced_Configuration__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Advanced_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Configuration</label>
    <type>Checkbox</type>
</CustomField>