force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/fields/FlexiChk__Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Checklist_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Template</label>
    <referenceTo>FlexiChk__Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklist Template Assignment Groups</relationshipLabel>
    <relationshipName>Checklist_Template_Assignment_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>