force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/fields/FlexiChk__Criteria__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Criteria__c</fullName>
    <label>Criteria</label>
    <type>TextArea</type>
</CustomField>