force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/fields/FlexiChk__Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Criteria_Type__c</fullName>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlexiChk__Criteria_Type</valueSetName>
    </valueSet>
</CustomField>