force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/fields/FlexiChk__Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Evaluation_Type__c</fullName>
    <description>The Type of Criteria that is used to find the record to initiate Checklist.</description>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formula Criteria</fullName>
            </value>
            <value>
                <fullName>Criteria Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>