force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/fields/FlexiChk__Formula__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Formula__c</fullName>
    <description>Formula to decide where Checklist should be created for a given object. It should return a Boolean value.</description>
    <label>Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>