force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/fields/FlexiChk__Object__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Object__c</fullName>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>