force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/fields/FlexiChk__Shared_Checklist__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Shared_Checklist__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Shared Checklist</label>
    <type>Checkbox</type>
</CustomField>