force-app/main/default/objects/FlexiChk__Checklist_Template_Assignment_Group__c/validationRules/FlexiChk__Validate_Formula_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>FlexiChk__Validate_Formula_Field</fullName>
    <active>true</active>
    <description>When the Criteria Type is Formula Criteria, Formula field is required.</description>
    <errorConditionFormula>AND(ISPICKVAL( FlexiChk__Evaluation_Type__c , &apos;Formula Criteria&apos;), 
 ISBLANK( FlexiChk__Formula__c )   )</errorConditionFormula>
    <errorMessage>When the Criteria Type is Formula Criteria, Formula field is required.</errorMessage>
</ValidationRule>